# hello-microverse

./: .clang-format  CMakeLists.txt  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
cmake/: common.cmake
gateway/: CMakeLists.txt
gateway/src/: main.cpp
services/audit/: CMakeLists.txt
services/audit/src/: main.cpp
services/greeter/: CMakeLists.txt
services/greeter/src/: main.cpp
services/identity/: CMakeLists.txt
services/identity/src/: main.cpp
services/preferences/: CMakeLists.txt
services/preferences/src/: main.cpp
